--- a/openatlas/templates/place/update.html
+++ b/openatlas/templates/place/update.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
     <a href="{{ url_for('place_index') }}">{{ _('place')|uc_first }}</a>
-    > {{ object_|link }}
+    > {{ object_|link|safe }}
     > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form() }}
+    {{ form|display_form|safe }}
 {% endblock %}
