--- a/openatlas/templates/profile/password.html
+++ b/openatlas/templates/profile/password.html
@@ -4,5 +4,5 @@
     > {{ _('change password')|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form('password-form') }}
+    {{ form|display_form('password-form')|safe }}
 {% endblock %}
