--- a/openatlas/templates/actor/insert.html
+++ b/openatlas/templates/actor/insert.html
@@ -4,5 +4,5 @@
     > + {{ code|get_class_name }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form('Person', True if code=='E21' else False) }}
+    {{ form|display_form('Person', True if code=='E21' else False)|safe }}
 {% endblock %}
