--- a/openatlas/templates/event/update.html
+++ b/openatlas/templates/event/update.html
@@ -1,9 +1,9 @@
 {% extends 'layout.html' %}
 {% block breadcrumb %}
     <a href="{{ url_for('event_index') }}">{{ _('event')|uc_first }}</a>
-    > {{ event|link }}
+    > {{ event|link|safe }}
     > {{ _('edit')|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form() }}
+    {{ form|display_form|safe }}
 {% endblock %}
