--- a/openatlas/templates/hierarchy/update.html
+++ b/openatlas/templates/hierarchy/update.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
     <a href="{{ url_for('node_index') }}">{{ _('node')|uc_first }}</a>
-    > {{ node|link }}
+    > {{ node|link|safe }}
     > {{ _('update') }}
 {% endblock %}
 {% block content %}
-    {{ form|display_form() }}
+    {{ form|display_form|safe }}
 {% endblock %}
