--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -5,7 +5,7 @@
 {% block content %}
     {% if current_user.is_authenticated %}
         <div style="float:left;margin-right:2em;">
-            {{ tables['counts']|pager }}
+            {{ tables['counts']|pager|safe }}
         </div>
         <div style="float:left;">
             <p>
@@ -29,7 +29,7 @@
         <div style="clear:both;"></div>
         {% if tables['bookmarks'].data %}
             <h1>Bookmarks</h1>
-            {{ tables['bookmarks']|pager }}
+            {{ tables['bookmarks']|pager|safe }}
         {% endif %}
     {% else %}
         <div>{{ intro|safe }}</div>
