--- a/openatlas/templates/node/insert.html
+++ b/openatlas/templates/node/insert.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
     <a href="{{ url_for('node_index') }}">{{ _('node')|uc_first }}</a>
-    > {{ root|link }}
+    > {{ root|link|safe }}
     > +
 {% endblock %}
 {% block content %}
-    {{ form|display_form() }}
+    {{ form|display_form|safe }}
 {% endblock %}
