--- a/openatlas/templates/translation/view.html
+++ b/openatlas/templates/translation/view.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
     <a href="{{ url_for('source_index') }}">{{ _('source')|uc_first }}</a>
-    > {{ source|link }}
+    > {{ source|link|safe }}
     > {{ translation.name }}
 {% endblock %}
 {% block content %}
@@ -16,6 +16,6 @@
         </a>
     {% endif %}
 </div>
-{{ data['info']|data_table }}
-{{ translation|description }}
+{{ data['info']|data_table|safe }}
+{{ translation|description|safe }}
 {% endblock %}
