Node interface continued

--- a/openatlas/templates/hierarchy/update.html
+++ b/openatlas/templates/hierarchy/update.html
@@ -6,4 +6,11 @@
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
+    <script>
+        $.each({{ forms|safe }}, function () {
+            if ($('#' + this).is(':checked')) {
+                $('#' + this).attr('disabled', true);
+            }
+        });
+    </script>
 {% endblock %}
