--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -40,7 +40,7 @@
                 link_cidoc='<a target="_blank" href="http://www.cidoc-crm.org/">CIDOC CRM</a>'|safe,
                 link_wiki='<a target="_blank" href="http://redmine.craws.net/projects/uni/wiki">Wiki</a>'|safe,
                 link_demo='<a target="_blank" href="http://openatlas.craws.net">Demo</a>'|safe
-            )|nl2br }}
+            )|nl2br|safe }}
         </div>
     {% endif %}
 {% endblock %}
