--- a/openatlas/templates/node/index.html
+++ b/openatlas/templates/node/index.html
@@ -5,8 +5,8 @@
 {% block content %}
     <div id="tabs-menu" class="tabs-container">
         <ul>
-            <li><a href="#menu-tab-system">{{ _('system')|uc_first }}</a></li>
-            <li><a href="#menu-tab-custom">{{ _('custom')|uc_first }}</a></li>
+            <li><a href="#menu-tab-system">{{ _('system types')|uc_first }}</a></li>
+            <li><a href="#menu-tab-custom">{{ _('custom types')|uc_first }}</a></li>
         </ul>
         {% for type_ in ['system', 'custom'] %}
             <div id="menu-tab-{{ type_ }}" style="padding: 0;" class="tab-content">
@@ -24,16 +24,9 @@
                     {% for node, tree in nodes[type_].items(): %}
                         <div id="tab-{{ node.id }}">
                             <p><strong>{{ node.name }}</strong></p>
-                            <div class="button-bar">
-                                {% if type_ == 'custom' and 'manager'|is_authorized %}
-                                    <a href="{{ url_for('hierarchy_update', id_=node.id) }} ">{{ _('edit')|uc_first }}</a>
-                                    <a onclick="return confirm('{{ _('delete')|uc_first }} {{ node.name.replace('\'', '') }}?')"
-                                        href="{{ url_for('hierarchy_delete', id_=node.id) }} ">{{ _('delete')|uc_first }}</a>
-                                {% endif %}
-                            </div>
                             <div style="float:left;margin-right:3em;">
                                 <div class="button-bar">
-                                    <form method="post" action="{{ url_for('node_insert', root_id=node.id) }}">
+                                    <form style="float:left" method="post" action="{{ url_for('node_insert', root_id=node.id) }}">
                                         <input
                                             class="tree-filter"
                                             id="{{ node.name|sanitize }}-tree-search"
@@ -43,10 +36,20 @@
                                         <input type="hidden" name="mode" value="insert" />
                                         <button type="submit" value="insert" name="add-node-submit">+</button>
                                     </form>
+                                    {% if type_ == 'custom' and 'manager'|is_authorized %}
+                                        <a href="{{ url_for('hierarchy_update', id_=node.id) }} ">{{ _('edit')|uc_first }}</a>
+                                        <a onclick="return confirm('{{ _('delete')|uc_first }} {{ node.name.replace('\'', '') }}?')"
+                                            href="{{ url_for('hierarchy_delete', id_=node.id) }} ">{{ _('delete')|uc_first }}</a>
+                                    {% endif %}
                                 </div>
+                                <div style="clear:both;"></div>
                                 {{ tree|safe }}
                             </div>
                             <div style="float:left;">
+                                <p>
+                                    <strong>{{ _('selection'|uc_first) }}</strong>:
+                                    {{ _('multiple') if node.multiple else _('single') }}
+                                </p>
                                 {% if node.forms: %}
                                     <p style="margin-top:0;">
                                         <strong>{{ _('forms')|uc_first }}</strong>:
@@ -56,10 +59,11 @@
                                     </p>
                                 {% endif %}
                                 {% if node.description %}
-                                    <p style="width:40em;">
-                                        {{ node.description }}
-                                    </p>
-                                {% endif %}
+                                    <div class="description">
+                                        <p class="description-title">{{ _('description')|uc_first }}</p>
+                                        <p style="width:40em;">{{ node.description|safe }}</p>
+                                    </div>
+-                                {% endif %}
                             </div>
                         </div>
                     {% endfor %}
