--- a/openatlas/templates/index/feedback.html
+++ b/openatlas/templates/index/feedback.html
@@ -13,12 +13,15 @@
             http://redmine.craws.net
         </a>
     </p>
-    {% if session['settings']['mail'] and session['settings']['mail_recipients_feedback']: %}
+    {% if session['settings']['mail_recipients_feedback']: %}
         <p>
             - {{ _('feedback mail') }}
             <a href="mailto:{{ session['settings']['mail_recipients_feedback'][0] }}">
                 {{ session['settings']['mail_recipients_feedback'][0] }}
             </a>
         </p>
+        {% if session['settings']['mail'] and session['settings']['mail_recipients_feedback']: %}
+            {{ form|display_form('feedback-form')|safe }}
+        {% endif %}
     {% endif %}
 {% endblock %}
