--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block breadcrumb %}
     <a href="{{ url_for('place_index') }}">{{ _('place')|uc_first }}</a>
-    > {{ object_.name }}
+    > {{ object_.name|truncate_string|safe }}
 {% endblock %}
 {% block content %}
 <div id="tabs" class="tabs-container">
