--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="theme-color" content="#ffffff" />
-        <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
-        <link rel="icon" type="image/png" href="/favicon/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="/favicon/favicon-16x16.png" sizes="16x16" />
-        <link rel="manifest" href="/favicon/manifest.json" />
-        <link rel="mask-icon" href="/favicon/safari-pinned-tab.svg" />
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+        <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" />
+        <link rel="manifest" href="/manifest.json" />
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" />
         <link rel="stylesheet" href="/css/reset.css?v={{ config['VERSION'] }}" />
         <link rel="stylesheet" href="/js/jquery/jquery-ui-1.12.1/jquery-ui.min.css" />
         <link rel="stylesheet" href="/js/jquery/jstree-3.3.3/themes/default/style.min.css" />
