--- a/openatlas/templates/hierarchy/update.html
+++ b/openatlas/templates/hierarchy/update.html
@@ -2,7 +2,7 @@
 {% block breadcrumb %}
     <a href="{{ url_for('node_index') }}">{{ _('node')|uc_first }}</a>
     > {{ node|link|safe }}
-    > {{ _('update') }}
+    > {{ _('edit') }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
