--- a/openatlas/templates/node/update.html
+++ b/openatlas/templates/node/update.html
@@ -5,7 +5,7 @@
         > {{ root|link|safe }}
     {% endif %}
     > {{ node|link|safe }}
-    > {{ _('update') }}
+    > {{ _('edit') }}
 {% endblock %}
 {% block content %}
     {{ form|display_form|safe }}
