--- a/openatlas/templates/reference/view.html
+++ b/openatlas/templates/reference/view.html
@@ -12,6 +12,7 @@
     </ul>
     <div id="tab-info">
         <div class="button-bar">
+            {{ reference|page_buttons|safe }}
             {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('reference_update', id_=reference.id) }}">
                     {{ _('edit')|uc_first }}
