--- a/openatlas/static/css/style.css
+++ b/openatlas/static/css/style.css
@@ -430,7 +430,7 @@ div.pager a {
     border: none;
     font-size: 0.9em;
     padding: 0;
-    margin: 0;
+    margin-right: 0.5em;
 }
 
 div.pager div.navigation {
