--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -12,6 +12,7 @@
     </ul>
     <div id="tab-info">
         <div class="button-bar">
+            {{ actor|page_buttons|safe }}
             {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('actor_update', id_=actor.id) }}">
                     {{ _('edit')|uc_first }}
