--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -10,6 +10,7 @@
     </ul>
     <div id="tab-info">
         <div class="button-bar">
+            {{ object_|page_buttons|safe }}
             {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('place_update', id_=object_.id) }}">
                     {{ _('edit')|uc_first }}
