--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -17,6 +17,7 @@
     </ul>
     <div id="tab-info">
         <div class="button-bar">
+            {{ source|page_buttons|safe }}
             {% if 'editor'|is_authorized: %}
                 <a href="{{ url_for('source_update', id_=source.id) }}">
                     {{ _('edit')|uc_first }}
