--- a/openatlas/templates/node/index.html
+++ b/openatlas/templates/node/index.html
@@ -63,7 +63,7 @@
                                         <p class="description-title">{{ _('description')|uc_first }}</p>
                                         <p style="width:40em;">{{ node.description|safe }}</p>
                                     </div>
--                                {% endif %}
+                                {% endif %}
                             </div>
                         </div>
                     {% endfor %}
