--- a/openatlas/templates/index/index.html
+++ b/openatlas/templates/index/index.html
@@ -36,10 +36,10 @@
         <div>
             {{ _('text_intro',
                 link_openatlas='<a target="_blank" href="http://openatlas.eu/">OpenAtlas</a>'|safe,
-                link_github='<a target="_blank" href="https://github.com/craws/OpenAtlas">GitHub</a>'|safe,
+                link_github='<a target="_blank" href="https://github.com/craws/OpenAtlas-Python">GitHub</a>'|safe,
                 link_cidoc='<a target="_blank" href="http://www.cidoc-crm.org/">CIDOC CRM</a>'|safe,
-                link_wiki='<a target="_blank" href="http://redmine.craws.net/projects/uni/wiki">Wiki</a>'|safe,
-                link_demo='<a target="_blank" href="http://openatlas.craws.net">Demo</a>'|safe
+                link_wiki='<a target="_blank" href="https://redmine.craws.net/projects/uni/wiki">Wiki</a>'|safe,
+                link_demo='<a target="_blank" href="https://openatlas.craws.net">Demo</a>'|safe
             )|nl2br|safe }}
         </div>
     {% endif %}
