--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -9,7 +9,7 @@
         <li>
             <a href="#tab-info">{{ _('info')|uc_first }}</a>
         </li>
-        <li><a href="#tab-event">{{ _('events')|uc_first }} ()</a></li>
+        <li><a href="#tab-event">{{ _('events')|uc_first }} ({{ tables['event']['data']|length }})</a></li>
         <li><a href="#tab-actor">{{ _('actors')|uc_first }} ()</a></li>
         <li><a href="#tab-place">{{ _('places')|uc_first }}()</a></li>
         <li><a href="#tab-reference">{{ _('references')|uc_first }} ()</a></li>
@@ -38,8 +38,14 @@
         {{ source|description|safe }}
     </div>
     <div id="tab-event">
-    <div class="button-bar">
-        </div>
+        {% if 'editor'|is_authorized: %}
+            <div class="button-bar">
+                <a href="{{ url_for('source_add', id_=source.id, class_name='event')}}">
+                    {{ _('add')|uc_first }}
+                </a>
+            </div>
+        {% endif %}
+        {{ tables['event']|pager|safe }}
     </div>
     <div id="tab-actor">
         <div class="button-bar">
