--- a/openatlas/templates/source/add.html
+++ b/openatlas/templates/source/add.html
@@ -5,5 +5,5 @@
     > {{ _('add')|uc_first + ' ' + _(class_name)|uc_first }}
 {% endblock %}
 {% block content %}
-    {{ table|pager|safe }}
+    {{ form|safe }}
 {% endblock %}
