Refactored delete and remove links

--- a/openatlas/templates/actor/view.html
+++ b/openatlas/templates/actor/view.html
@@ -14,13 +14,8 @@
         <div class="button-bar">
             {{ actor|page_buttons|safe }}
             {% if 'editor'|is_authorized: %}
-                <a href="{{ url_for('actor_update', id_=actor.id) }}">
-                    {{ _('edit')|uc_first }}
-                </a>
-                <a onclick="return confirm('{{ _('delete')|uc_first }} {{ actor.name.replace('\'', '') }}?')"
-                    href="{{ url_for('actor_delete', id_=actor.id) }}">
-                    {{ _('delete')|uc_first }}
-                </a>
+                <a href="{{ url_for('actor_update', id_=actor.id) }}">{{ _('edit')|uc_first }}</a>
+                {{ delete_link|safe }}
             {% endif %}
             {{ actor.id|bookmark_toggle|safe }}
         </div>
