--- a/openatlas/templates/place/view.html
+++ b/openatlas/templates/place/view.html
@@ -15,10 +15,7 @@
                 <a href="{{ url_for('place_update', id_=object_.id) }}">
                     {{ _('edit')|uc_first }}
                 </a>
-                <a onclick="return confirm('{{ _('delete')|uc_first }} {{ object_.name.replace('\'', '') }}?')"
-                   href="{{ url_for('place_delete', id_=object_.id) }}">
-                    {{ _('delete')|uc_first }}
-                </a>
+                {{ delete_link|safe }}
             {% endif %}
             {{ object_.id|bookmark_toggle|safe }}
         </div>
