Source links to actors and places

--- a/openatlas/templates/layout.html
+++ b/openatlas/templates/layout.html
@@ -160,6 +160,7 @@
                     project powered by <a target="_blank" href="http://craws.net">craws.net</a>
                 </div>
             {% endif %}
+            <div style="clear:both"></div>
         </div>
     </body>
 </html>
