--- a/openatlas/templates/source/view.html
+++ b/openatlas/templates/source/view.html
@@ -6,18 +6,12 @@
 {% block content %}
 <div id="tabs" class="tabs-container">
     <ul>
-        <li>
-            <a href="#tab-info">{{ _('info')|uc_first }}</a>
-        </li>
+        <li><a href="#tab-info">{{ _('info')|uc_first }}</a></li>
         <li><a href="#tab-event">{{ _('events')|uc_first }} ({{ tables['event']['data']|length }})</a></li>
-        <li><a href="#tab-actor">{{ _('actors')|uc_first }} ()</a></li>
-        <li><a href="#tab-place">{{ _('places')|uc_first }}()</a></li>
+        <li><a href="#tab-actor">{{ _('actors')|uc_first }} ({{ tables['actor']['data']|length }})</a></li>
+        <li><a href="#tab-place">{{ _('places')|uc_first }} ({{ tables['place']['data']|length }})</a></li>
         <li><a href="#tab-reference">{{ _('references')|uc_first }} ()</a></li>
-        <li>
-            <a href="#tab-translations">
-                {{ _('translations')|uc_first }} ({{ tables['translation']['data']|length }})
-            </a>
-        </li>
+        <li><a href="#tab-translations">{{ _('translations')|uc_first }} ({{ tables['translation']['data']|length }})</a></li>
     </ul>
     <div id="tab-info">
         <div class="button-bar">
@@ -34,24 +28,18 @@
         {{ data['info']|data_table|safe }}
         {{ source|description|safe }}
     </div>
-    <div id="tab-event">
-        {% if 'editor'|is_authorized: %}
-            <div class="button-bar">
-                <a href="{{ url_for('source_add', id_=source.id, class_name='event')}}">
-                    {{ _('add')|uc_first }}
-                </a>
-            </div>
-        {% endif %}
-        {{ tables['event']|pager|safe }}
-    </div>
-    <div id="tab-actor">
-        <div class="button-bar">
+    {% for name in ['event', 'actor', 'place'] %}
+        <div id="tab-{{ name }}">
+            {% if 'editor'|is_authorized: %}
+                <div class="button-bar">
+                    <a href="{{ url_for('source_add', id_=source.id, class_name=name)}}">
+                        {{ _('add')|uc_first }}
+                    </a>
+                </div>
+            {% endif %}
+            {{ tables[name]|pager|safe }}
         </div>
-    </div>
-    <div id="tab-place">
-        <div class="button-bar">
-        </div>
-    </div>
+    {% endfor %}
     <div id="tab-reference">
         <div class="button-bar">
         </div>
